<resources>
    <string name="app_name">PetsHelp</string>
    <string name="auth">ЛИЧНЫЙ КАБИНЕТ</string>
    <string name="title_activity_person">Person</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_gallery">Информация о приюте</string>
    <string name="menu_slideshow">Партнёры</string>
    <string name="menu_petsminus">Пристраиваемые животные</string>
    <string name="menu_petspristr">Пристроенные животные</string>
    <string name="menu_exit">Выход</string>
    <string name="title_activity_menu">Menu</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="helpText">Чтобы помочь приюту Вы можете:\n1) перейти на страницу \'Партнёры\', перейти по ссылкам организаций партнёров и купить зоотовары, которые также можете привезти в приют;\n2) перейти по ссылке указанной ниже, в которой сможете перевести деньги для помощи животным</string>
    <string name="helppriut">Помощь приюту</string>


</resources>